--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
 	"name": "Human Factory",
-	"version": "0.4.0",
+	"version": "0.5.0",
 	"description": "Insert random values in fields for first names, last names, birthdates…",
 	"manifest_version": 2,
+	"permissions": ["activeTab"],
 	"background": {
 		"scripts": ["dist/background.js"],
 		"persistent": false
