--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,18 @@
 {
 	"name": "Human Factory",
-	"version": "0.5.0",
+	"version": "0.5.2",
 	"description": "Insert random values in fields for first names, last names, birthdates…",
 	"manifest_version": 2,
 	"permissions": ["activeTab"],
+	"homepage_url": "https://github.com/schubev/human-factory",
 	"background": {
 		"scripts": ["dist/background.js"],
 		"persistent": false
+	},
+	"icons": {
+		"16": "dist/icon-16.png",
+		"48": "dist/icon-48.png",
+		"128": "dist/icon-128.png"
 	},
 	"content_scripts": [
 		{
