--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "webpack:production": "webpack --production --display-modules",
     "bsb:watch": "bsb -w",
     "bsb:make": "bsb -make-world",
     "bsb:clean": "bsb -clean-world",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
