--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,3 +14,7 @@ jobs:
     - run: npm install
     - run: make
     - run: make test
+    - name: Save artifact
+      uses: actions/upload-artifact@v2
+      with:
+        path: ./human-factory.zip
