--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,4 +17,5 @@ jobs:
     - name: Save artifact
       uses: actions/upload-artifact@v2
       with:
+        name: human-factory.zip
         path: ./human-factory.zip
