--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         node-version: 12.x
     - run: npm install
-    - run: make
+    - run: make artifact
     - run: make test
     - name: Save artifact
       uses: actions/upload-artifact@v2
