fix manifest paths

--- a/manifest.json
+++ b/manifest.json
@@ -6,13 +6,13 @@
 	"permissions": ["activeTab"],
 	"homepage_url": "https://github.com/schubev/human-factory",
 	"background": {
-		"scripts": ["dist/background.js"],
+		"scripts": ["background.js"],
 		"persistent": false
 	},
 	"icons": {
-		"16": "dist/icon-16.png",
-		"48": "dist/icon-48.png",
-		"128": "dist/icon-128.png"
+		"16": "icon-16.png",
+		"48": "icon-48.png",
+		"128": "icon-128.png"
 	},
 	"commands": {
 		"fill-focused-field": {
